# laudato-system

./: README.md  docker-compose.yml
backend/: .env  .gitignore  Dockerfile  pyproject.toml  requirements.txt  test.db
backend/alembic/versions/: 4a2b7596f452_create_users_table.py
backend/app/: .gitignore  database.py  main.py  pyproject.toml
backend/app/api/routes/: auth.py  category.py  warning.py
backend/app/core/: config.py  security.py
backend/app/models/: category.py  users.py  warning.py
backend/app/schemas/: auth.py  category.py  warning.py
backend/app/services/: auth.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 4b05bc6b7b90_warning_and_category.py  ca8b0d3e2bf1_scopes.py  cbea2fc10255_create_table_user.py
backend/tests/: conftest.py  test_main.py
backend/tests/apis/: test_auth.py  test_category.py  test_warning.py
frontend/: Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json
frontend/components/: AnnouncementCard.vue  HerikThalisson.vue  HomePage.vue  MassIntentionForm.vue  MassMessageForm.vue  PrayerAudioPlayer.vue  SocialLinks.vue  VirtualCandle.vue
frontend/composables/: customFetch.js
frontend/layouts/: default.vue
frontend/pages/: index.vue  login.vue  register.vue
frontend/pages/community/: index.vue  new.vue
frontend/pages/devotional/: candles.vue  index.vue  intentions.vue  prayers.vue
frontend/plugins/: vuetify.js
